tools/lxsum/tests/snapshots/integration__snapshot_prose_format.snap
---
source: tools/lxsum/tests/integration.rs
assertion_line: 156
expression: out.to_plain()
---
Summary: CI deployment succeeded for v3.7.2 after a brief health-check delay

All unit tests passed and the Docker image was pushed to the registry. The staging health check experienced a brief slowdown but recovered. Smoke tests passed and the production deployment completed successfully.
