tools/lxsum/tests/snapshots/integration__snapshot_short_mode.snap
---
source: tools/lxsum/tests/integration.rs
assertion_line: 130
expression: out.to_plain()
---
Summary: CI deployment succeeded for v3.7.2 after a brief health-check delay
